--- a/Files/Code/challenge.ipynb
+++ b/Files/Code/challenge.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "def std_outlier(id):\n",
     "    query = f'''\n",
     "    select date, amount\n",
-    "    from anon_data\n",
+    "    from full_data\n",
     "    where cardholder_id = {id}\n",
     "    order by date;\n",
     "    '''\n",
@@ -61,23 +61,23 @@
     "    upper_range = (df['amount'].std()) + df['amount'].median()\n",
     "    outlier_df = df[df['amount'] > upper_range]\n",
     "    \n",
-    "    print(f\"the median is {df['amount'].median()}\")\n",
-    "    print(f\"the upper range is {upper_range}\")\n",
+    "    print(f\"the median charge is ${round(df['amount'].median(), 2)}\")\n",
+    "    print(f\"the upper range of charges starts at ${round(upper_range, 2)}\")\n",
     "    print(f\"there are {outlier_df.count()[0]} outliers for cardholder id #{id}\")\n",
     "    return outlier_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the median is 10.145\n",
-      "the upper range is 318.8635326800269\n",
+      "the median charge is $10.14\n",
+      "the upper range of charges starts at $318.86\n",
       "there are 9 outliers for cardholder id #25\n"
      ]
     },
@@ -164,7 +164,7 @@
        "2018-12-18 13:33:37  1074.0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
     "def iqr_outlier(id):\n",
     "    query = f'''\n",
     "    select date, amount\n",
-    "    from anon_data\n",
+    "    from full_data\n",
     "    where cardholder_id = {id}\n",
     "    order by date;\n",
     "    '''\n",
@@ -202,8 +202,8 @@
     "    upper_range = q3 + (1.5 * iqr)\n",
     "    outlier_df = df[df['amount'] > upper_range]\n",
     "    \n",
-    "    print(f\"the median is {df['amount'].median()}\")\n",
-    "    print(f\"the upper range is {upper_range}\")\n",
+    "    print(f\"the median charge is ${round(df['amount'].median(), 2)}\")\n",
+    "    print(f\"the upper range of charges starts at ${round(upper_range, 2)}\")\n",
     "    print(f\"there are {outlier_df.count()[0]} outliers for cardholder id #{id}\")\n",
     "    outlier_df = df[df['amount'] > upper_range]\n",
     "    return outlier_df"
@@ -211,15 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the median is 10.145\n",
-      "the upper range is 31.57875\n",
+      "the median charge is $10.14\n",
+      "the upper range of charges starts at $31.58\n",
       "there are 12 outliers for cardholder id #25\n"
      ]
     },
@@ -321,7 +321,7 @@
        "2018-12-18 13:33:37  1074.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
