Finishes Report Data

--- a/Files/Code/challenge.ipynb
+++ b/Files/Code/challenge.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,27 +58,186 @@
     "    order by date;\n",
     "    '''\n",
     "    df = pd.read_sql(query, conn).set_index('date')\n",
-    "    upper_range = (df['amount'].std()) + df['amount'].median()\n",
+    "    upper_range = (df['amount'].std() * 2) + df['amount'].median()\n",
     "    outlier_df = df[df['amount'] > upper_range]\n",
     "    \n",
-    "    print(f\"the median charge is ${round(df['amount'].median(), 2)}\")\n",
-    "    print(f\"the upper range of charges starts at ${round(upper_range, 2)}\")\n",
-    "    print(f\"there are {outlier_df.count()[0]} outliers for cardholder id #{id}\")\n",
+    "    print(f\"The median charge is ${round(df['amount'].median(), 2)}\")\n",
+    "    print(f\"The upper range of charges starts at ${round(upper_range, 2)}\")\n",
+    "    print(f\"There are {outlier_df.count()[0]} outliers for cardholder id #{id}\")\n",
     "    return outlier_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the median charge is $10.14\n",
-      "the upper range of charges starts at $318.86\n",
-      "there are 9 outliers for cardholder id #25\n"
+      "The median charge is $10.26\n",
+      "The upper range of charges starts at $21.34\n",
+      "There are 0 outliers for cardholder id #2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [amount]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find anomalous transactions for 3 random card holders\n",
+    "std_outlier(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median charge is $10.37\n",
+      "The upper range of charges starts at $659.8\n",
+      "There are 7 outliers for cardholder id #18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-02-19 22:48:25</th>\n",
+       "      <td>1839.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-03 03:23:37</th>\n",
+       "      <td>1077.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-03 20:02:28</th>\n",
+       "      <td>1814.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-18 09:19:08</th>\n",
+       "      <td>974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-10 22:49:41</th>\n",
+       "      <td>1176.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-17 05:30:43</th>\n",
+       "      <td>1769.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-13 12:09:58</th>\n",
+       "      <td>1154.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     amount\n",
+       "date                       \n",
+       "2018-02-19 22:48:25  1839.0\n",
+       "2018-04-03 03:23:37  1077.0\n",
+       "2018-06-03 20:02:28  1814.0\n",
+       "2018-07-18 09:19:08   974.0\n",
+       "2018-09-10 22:49:41  1176.0\n",
+       "2018-11-17 05:30:43  1769.0\n",
+       "2018-12-13 12:09:58  1154.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std_outlier(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The median charge is $10.14\n",
+      "The upper range of charges starts at $627.58\n",
+      "There are 9 outliers for cardholder id #25\n"
      ]
     },
     {
@@ -164,13 +323,12 @@
        "2018-12-18 13:33:37  1074.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find anomalous transactions for 3 random card holders\n",
     "std_outlier(25)"
    ]
   },
@@ -183,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +369,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the median charge is $10.26\n",
+      "the upper range of charges starts at $27.03\n",
+      "there are 0 outliers for cardholder id #2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [amount]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find anomalous transactions for 3 random card holders\n",
+    "iqr_outlier(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the median charge is $10.37\n",
+      "the upper range of charges starts at $35.21\n",
+      "there are 12 outliers for cardholder id #18\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-07 01:10:54</th>\n",
+       "      <td>175.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-08 11:15:36</th>\n",
+       "      <td>333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-02-19 22:48:25</th>\n",
+       "      <td>1839.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-04-03 03:23:37</th>\n",
+       "      <td>1077.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-03 20:02:28</th>\n",
+       "      <td>1814.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-30 01:56:19</th>\n",
+       "      <td>121.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-06 16:12:08</th>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-18 09:19:08</th>\n",
+       "      <td>974.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-02 11:20:42</th>\n",
+       "      <td>458.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-09-10 22:49:41</th>\n",
+       "      <td>1176.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-17 05:30:43</th>\n",
+       "      <td>1769.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-13 12:09:58</th>\n",
+       "      <td>1154.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     amount\n",
+       "date                       \n",
+       "2018-01-07 01:10:54   175.0\n",
+       "2018-01-08 11:15:36   333.0\n",
+       "2018-02-19 22:48:25  1839.0\n",
+       "2018-04-03 03:23:37  1077.0\n",
+       "2018-06-03 20:02:28  1814.0\n",
+       "2018-06-30 01:56:19   121.0\n",
+       "2018-07-06 16:12:08   117.0\n",
+       "2018-07-18 09:19:08   974.0\n",
+       "2018-09-02 11:20:42   458.0\n",
+       "2018-09-10 22:49:41  1176.0\n",
+       "2018-11-17 05:30:43  1769.0\n",
+       "2018-12-13 12:09:58  1154.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iqr_outlier(18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -321,22 +663,14 @@
        "2018-12-18 13:33:37  1074.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find anomalous transactions for 3 random card holders\n",
     "iqr_outlier(25)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
